[gd_scene load_steps=20 format=3 uid="uid://cyu3l6we2jq23"]

[ext_resource type="Texture2D" uid="uid://ckfvpp3w58ad" path="res://icon.svg" id="1_5osnb"]
[ext_resource type="Script" uid="uid://cstnlbygcta3i" path="res://scripts/ecs/components/c_movement_component.gd" id="1_6m9bm"]
[ext_resource type="Script" uid="uid://b833lsf5jex23" path="res://scripts/ecs/components/c_jump_component.gd" id="2_h3hux"]
[ext_resource type="Script" uid="uid://bs12uwba3rh6o" path="res://scripts/ecs/components/c_input_component.gd" id="3_2fo1m"]
[ext_resource type="Script" uid="uid://db7wk78767ida" path="res://scripts/ecs/components/c_rotate_to_input_component.gd" id="4_4etni"]
[ext_resource type="Script" uid="uid://dbnpg30arx0vt" path="res://scripts/ecs/components/c_floating_component.gd" id="5_f1jtd"]
[ext_resource type="Script" uid="uid://chml6n4g2oasr" path="res://scripts/ecs/components/c_align_with_surface_component.gd" id="6_xa0wx"]
[ext_resource type="Script" uid="uid://dwp6w662o8blj" path="res://scripts/ecs/components/c_landing_indicator_component.gd" id="8_weo2m"]
[ext_resource type="Resource" path="res://resources/movement_default.tres" id="9_mov"]
[ext_resource type="Resource" path="res://resources/jump_default.tres" id="10_jump"]
[ext_resource type="Resource" uid="uid://dtjqohqt1rl7s" path="res://resources/rotate_default.tres" id="11_rot"]
[ext_resource type="Resource" uid="uid://boa7uhyoi17xk" path="res://resources/floating_default.tres" id="12_float"]
[ext_resource type="Resource" path="res://resources/align_default.tres" id="13_align"]
[ext_resource type="Resource" uid="uid://cwvcfu1vgo7vr" path="res://resources/landing_indicator_default.tres" id="14_land"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6mvan"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6mvan"]
shading_mode = 0
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.11764706, 0.7372549, 0.4509804, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yiwtw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yiwtw"]
shading_mode = 0
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.08627451, 0.3529412, 0.29803923, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_16kfq"]

[node name="E_Base" type="Node3D"]

[node name="Player_Body" type="CharacterBody3D" parent="."]

[node name="Body_Mesh" type="CSGMesh3D" parent="Player_Body"]
transform = Transform3D(1, 0, 0, 0, 0.5518581, 0, 0, 0, 1, 0, -0.3421986, 0)
mesh = SubResource("CapsuleMesh_6mvan")
material = SubResource("StandardMaterial3D_6mvan")

[node name="Direction_Mesh" type="MeshInstance3D" parent="Player_Body/Body_Mesh"]
transform = Transform3D(0.39169633, 0, 0, 0, 0.15378642, 0, 0, 0, 0.36884245, -0.019476414, 0.6069238, -0.4746977)
mesh = SubResource("BoxMesh_yiwtw")
surface_material_override/0 = SubResource("StandardMaterial3D_yiwtw")

[node name="GroundIndicator" type="Sprite3D" parent="Player_Body/Body_Mesh"]
transform = Transform3D(1, 0, 0, 0, -7.920765e-08, -1.8120599, 0, 1, -4.371139e-08, 0, -2.3227184, 0)
texture = ExtResource("1_5osnb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_Body"]
shape = SubResource("CapsuleShape3D_16kfq")

[node name="HoverRays" type="Node3D" parent="Player_Body"]

[node name="Center" type="RayCast3D" parent="Player_Body/HoverRays"]
target_position = Vector3(0, -1.5, 0)

[node name="Forward" type="RayCast3D" parent="Player_Body/HoverRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.35)
target_position = Vector3(0, -1.5, 0)

[node name="Back" type="RayCast3D" parent="Player_Body/HoverRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.35)
target_position = Vector3(0, -1.5, 0)

[node name="Left" type="RayCast3D" parent="Player_Body/HoverRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 0, 0)
target_position = Vector3(0, -1.5, 0)

[node name="Right" type="RayCast3D" parent="Player_Body/HoverRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0, 0)
target_position = Vector3(0, -1.5, 0)

[node name="Components" type="Node" parent="."]

[node name="C_MovementComponent" type="Node" parent="Components"]
script = ExtResource("1_6m9bm")
settings = ExtResource("9_mov")
character_body_path = NodePath("../../Player_Body")
input_component_path = NodePath("../C_InputComponent")
support_component_path = NodePath("../C_FloatingComponent")

[node name="C_JumpComponent" type="Node" parent="Components"]
script = ExtResource("2_h3hux")
settings = ExtResource("10_jump")
character_body_path = NodePath("../../Player_Body")
input_component_path = NodePath("../C_InputComponent")

[node name="C_InputComponent" type="Node" parent="Components"]
script = ExtResource("3_2fo1m")

[node name="C_RotateToInputComponent" type="Node" parent="Components"]
script = ExtResource("4_4etni")
settings = ExtResource("11_rot")
target_node_path = NodePath("../../Player_Body")
input_component_path = NodePath("../C_InputComponent")

[node name="C_FloatingComponent" type="Node" parent="Components"]
script = ExtResource("5_f1jtd")
settings = ExtResource("12_float")
character_body_path = NodePath("../../Player_Body")
raycast_root_path = NodePath("../../Player_Body/HoverRays")

[node name="C_AlignWithSurfaceComponent" type="Node" parent="Components"]
script = ExtResource("6_xa0wx")
settings = ExtResource("13_align")
character_body_path = NodePath("../../Player_Body")
visual_alignment_path = NodePath("../../Player_Body/Body_Mesh")
floating_component_path = NodePath("../C_FloatingComponent")

[node name="C_LandingIndicatorComponent" type="Node" parent="Components"]
script = ExtResource("8_weo2m")
settings = ExtResource("14_land")
character_body_path = NodePath("../../Player_Body")
origin_marker_path = NodePath("../../Player_Body/HoverRays/Center")
landing_marker_path = NodePath("../../Player_Body/Body_Mesh/GroundIndicator")
